# thronglets

./: .env.example  .gitignore  CMakeLists.txt  README.md  hot_reload_cpp.sh  setup_env.sh
client/: index.html  package-lock.json  package.json  vite.config.ts
client/public/: sim.js
client/src/: App.css  App.tsx  index.css
client/src/hooks/: useSim.ts
client/src/rendering/: TexturedVoxel.tsx
client/src/simulation/: sim_control.tsx  sim_render.tsx  sim_world.tsx  wasm_link.ts
simulation/src/: main.cpp  sim.cpp  sim.h  world.cpp  world.h
